Updating to final version

--- a/api.html
+++ b/api.html
@@ -1,19 +1,20 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
-<html lang="es"><head>
+<html lang="es">
+<head>
     <!-- Datos que describen el documento -->
-    <meta charset="UTF-8">
-    <meta name="author" content="Sergio Truébano Robles">
-    <meta name="description" content="Reproductor MP3 de audio">
-    <meta name="keywords" content="api,html5,reproductor,audio">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name ="author" content ="Sergio Truébano Robles" />
+    <meta name ="description" content ="Reproductor MP3 de audio" />
+    <meta name ="keywords" content ="api,html5,reproductor,audio" />
+    <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <title>Escritorio Virtual - Reproductor</title>
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
-    <link rel="stylesheet" type="text/css" href="estilo/estilo.css">
-    <link rel="stylesheet" type="text/css" href="estilo/layout.css">
-    <link rel="stylesheet" type="text/css" href="estilo/api.css">
-    <link rel="icon" href="multimedia/imagenes/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/api.css" />
+    <link rel="icon" href="multimedia/imagenes/favicon.ico" />
 
     <!--Javascript-->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
@@ -39,10 +40,10 @@
         <h2>Menú de juegos</h2>
         <nav>
             <a href="memoria.html" title="Juego de memoria" accesskey="U" tabindex="8">Juego de memoria</a>
-            <a href="sudoku.html" title="Sudoku" accesskey="O" tabindex="9">Sudoku</a> 
+            <a href="sudoku.html" title="Sudoku" accesskey="K" tabindex="9">Sudoku</a> 
             <a href="php/crucigrama.php" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama matemático</a>
-            <a href="api.html" title="Reproductor" accesskey="P" tabindex="11">Reproductor de música</a>
-            <a href="php/inventario.php" title="Inventario" accesskey="T" tabindex="12">Inventario de componentes</a>
+            <a href="api.html" title="Reproductor" accesskey="R" tabindex="11">Reproductor de música</a>
+            <a href="php/inventario.php" title="Inventario" accesskey="O" tabindex="12">Inventario de componentes</a>
         </nav>
     </section>
 
@@ -51,7 +52,7 @@
         <h2>Reproductor de música</h2>
         <p>
             <label for="input">Introduzca nuevas canciones de sus archivos:</label>
-            <input type="file" id="input" tabindex="13" multiple="">
+            <input type="file" id="input" tabindex="13" multiple>
         </p>
         <section data-element="DnD"> 
             <h3>Añadir nuevas canciones a la playlist</h3>
@@ -59,16 +60,16 @@
         </section>
         <section data-element="playlist">
             <h3>Playlist de música</h3>
-            <ul><li data-url="blob:https://192.168.1.132/bef2bfb8-09ee-44f9-a296-c2e7a484a440">andylucas.mp3</li></ul>
+            <ul></ul>
             
             <p>
                 <label for="musica">Pulse para eliminar todas las canciones</label>
                 <button onclick="api.removeMusic();" id="musica" tabindex="14">Eliminar</button>
             </p>
             
-            <audio controls="" src="blob:https://192.168.1.132/a95e2654-1d3c-43d9-bb5b-0bbe886b34e6"></audio>
+            <audio controls tabindex="15"></audio>
         </section>
     </main>
 
-
-</body></html>
+</body>
+</html>
