--- a/meteorologia.html
+++ b/meteorologia.html
@@ -1,19 +1,20 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
-<html lang="es"><head>
+<html lang="es">
+<head>
     <!-- Datos que describen el documento -->
-    <meta charset="UTF-8">
-    <meta name="author" content="Sergio Truébano Robles">
-    <meta name="description" content="Meteorología de Brunei">
-    <meta name="keywords" content="meteorología, Brunei, temperatura, humedad">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name ="author" content ="Sergio Truébano Robles" />
+    <meta name ="description" content ="Meteorología de Brunei" />
+    <meta name ="keywords" content ="meteorología, Brunei, temperatura, humedad" />
+    <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <title>Escritorio Virtual - Meteorología</title>
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
-    <link rel="stylesheet" type="text/css" href="estilo/estilo.css">
-    <link rel="stylesheet" type="text/css" href="estilo/layout.css">
-    <link rel="stylesheet" type="text/css" href="estilo/meteorologia.css">
-    <link rel="icon" href="multimedia/imagenes/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/meteorologia.css" />
+    <link rel="icon" href="multimedia/imagenes/favicon.ico" />
 
     <!-- link de enlace a javascript y jquery -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
@@ -46,8 +47,8 @@
             document.write("</article>");
             
             pais.getMeteorologia();
-        </script><article><h3>Brunéi</h3><p>Capital: Begawan</p><p>Coordenadas (Latitud, Longitud):  4.247525, 114.581275</p><ul><li>Población: 445.373 personas</li><li>Forma de Gobierno: Monarquía absolutista</li><li>Religión Mayoritaria: Musulmana</li></ul></article><section><h3>Previsión meteorológica en Brunéi</h3><article data-element="meteo"><h4>Martes, 19 de diciembre de 2023, 18:00:00</h4><img src="https://openweathermap.org/img/wn/04n.png" alt="Martes, 19 de diciembre de 2023, 18:00:00 nubes"><ul><li>Previsión: nubes</li><li>Temperatura máxima: 23.71°C</li><li>Temperatura mínima: 23.54°C</li><li>Humedad: 98%</li><li>Cantidad de lluvía: 0mm</li></ul></article><article data-element="meteo"><h4>Miércoles, 20 de diciembre de 2023, 18:00:00</h4><img src="https://openweathermap.org/img/wn/10n.png" alt="Miércoles, 20 de diciembre de 2023, 18:00:00 lluvia ligera"><ul><li>Previsión: lluvia ligera</li><li>Temperatura máxima: 23.69°C</li><li>Temperatura mínima: 23.69°C</li><li>Humedad: 99%</li><li>Cantidad de lluvía: 0.15mm</li></ul></article><article data-element="meteo"><h4>Jueves, 21 de diciembre de 2023, 18:00:00</h4><img src="https://openweathermap.org/img/wn/10n.png" alt="Jueves, 21 de diciembre de 2023, 18:00:00 lluvia moderada"><ul><li>Previsión: lluvia moderada</li><li>Temperatura máxima: 24.27°C</li><li>Temperatura mínima: 24.27°C</li><li>Humedad: 98%</li><li>Cantidad de lluvía: 3.45mm</li></ul></article><article data-element="meteo"><h4>Viernes, 22 de diciembre de 2023, 18:00:00</h4><img src="https://openweathermap.org/img/wn/10n.png" alt="Viernes, 22 de diciembre de 2023, 18:00:00 lluvia moderada"><ul><li>Previsión: lluvia moderada</li><li>Temperatura máxima: 23.53°C</li><li>Temperatura mínima: 23.53°C</li><li>Humedad: 99%</li><li>Cantidad de lluvía: 4.48mm</li></ul></article><article data-element="meteo"><h4>Sábado, 23 de diciembre de 2023, 18:00:00</h4><img src="https://openweathermap.org/img/wn/10n.png" alt="Sábado, 23 de diciembre de 2023, 18:00:00 lluvia ligera"><ul><li>Previsión: lluvia ligera</li><li>Temperatura máxima: 22.98°C</li><li>Temperatura mínima: 22.98°C</li><li>Humedad: 98%</li><li>Cantidad de lluvía: 1.22mm</li></ul></article></section>
+        </script>
     </main>
 
-
-</body></html>
+</body>
+</html>
