--- a/juegos.html
+++ b/juegos.html
@@ -1,18 +1,19 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
-<html lang="es"><head>
+<html lang="es">
+<head>
     <!-- Datos que describen el documento -->
-    <meta charset="UTF-8">
-    <meta name="author" content="Sergio Truébano Robles">
-    <meta name="description" content="Juegos interactivos">
-    <meta name="keywords" content="juego,sudoku,memoria,crucigrama,reproductor,música,inventario,componentes">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name ="author" content ="Sergio Truébano Robles" />
+    <meta name ="description" content ="Juegos interactivos" />
+    <meta name ="keywords" content ="juego,sudoku,memoria,crucigrama,reproductor,música,inventario,componentes" />
+    <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <title>Escritorio Virtual - Juegos</title>
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
-    <link rel="stylesheet" type="text/css" href="estilo/estilo.css">
-    <link rel="stylesheet" type="text/css" href="estilo/layout.css">
-    <link rel="icon" href="multimedia/imagenes/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
+    <link rel="icon" href="multimedia/imagenes/favicon.ico" />
 </head>
 
 <body>
@@ -34,10 +35,10 @@
         <h2>Menú de juegos</h2>
         <nav>
             <a href="memoria.html" title="Juego de memoria" accesskey="U" tabindex="8">Juego de memoria</a>
-            <a href="sudoku.html" title="Sudoku" accesskey="O" tabindex="9">Sudoku</a> 
+            <a href="sudoku.html" title="Sudoku" accesskey="K" tabindex="9">Sudoku</a> 
             <a href="php/crucigrama.php" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama matemático</a>
-            <a href="api.html" title="Reproductor" accesskey="P" tabindex="11">Reproductor de música</a>
-            <a href="php/inventario.php" title="Inventario" accesskey="T" tabindex="12">Inventario de componentes</a>
+            <a href="api.html" title="Reproductor" accesskey="R" tabindex="11">Reproductor de música</a>
+            <a href="php/inventario.php" title="Inventario" accesskey="O" tabindex="12">Inventario de componentes</a>
         </nav>
     </section>
 
@@ -46,5 +47,5 @@
             <p>Puede divertirse seleccionando uno de los juegos disponibles</p>
     </main>
 
-
-</body></html>
+</body>
+</html>
